# lexdataemail

./: .gitignore  README.md  pyproject.toml
src/lexdataemail/: email_sender.py
