[project]
name
version
authors = [
	{name="Emanuel Cabrera Novoa", email="emanuelcabreranovoa@hotmail.com"}
]
description = "simple library to send emails"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]

[project.urls]
Homepage =
Issues =

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
